-added standard doors to elevator objects
-added sound support to doors
-fixed a crash that occurred if ServicedFloors included an invalid floor number
-added internal error reporting system
-new object tree browser
-elevator parking fixes
-call cancel now only works in fire phase 2 mode
-elevators now reroute properly if switched to fire phase 1 mode while moving

Version 1.6 (2.0 Alpha 6)
-------------------------
-added current floor ID to the control panel's main and camera control windows
-added support for forcing autosizing on or off on a per-texture basis
-added support for floor arrival sounds
-added more camera speed config parameters
-added full camera reset (respawn) triggered by F6
-added elevator motor sound object
-added support for exiting back to the main screen
-added support for per-door elevator floor signs
-added new simulator/building statistics dialog
-moved button code into separate control class
-added support for elevator button lighting
-fixed issue involving elevator door sound playing for non-serviced doors
-added script console
-text-to-texture objects now support transparency
-fixed floor sign autosizing issues
-many elevator queue fixes
-fixed call cancel button
-app now properly exits to the main menu if a building fails to load
-added custom sound objects
-added new Simple building with basements
-more comments added to the Simple building
-elevators can now be named
-call buttons now light up in groups
-added Schindler MT textures and sounds
-added verbose mode
-control panel can now be reopened by pressing F12
-fixed blank canvas issue on Mac
-elevator modes can now be set from building scripts and the INI file
-fixed ACP mode
-fixed other service modes
-added SetTextureMapping2 command
-created new planar texture mapper
-added the GetWallExtents and Print commands
-added InterfloorOnTop global parameter and base variable
-made new SetPlanarMapping command which is an extended version of the old ReverseExtents command